--- a/public/css/page-landing.css
+++ b/public/css/page-landing.css
@@ -8,9 +8,8 @@
 
 #container {
     margin: auto;
-    width: 90%;
+    width: min(90%, 112rem);
 }
-
 
 .location, h1, .visit p {
     height: 16vh;
@@ -26,13 +25,13 @@
     align-items: center;
     justify-content: center;
     margin: auto;
-    transition: background 200ms;
+    transition: background-color 200ms;
+    animation-delay: 250ms;
 }
 
 .visit a:hover {
     background: #96feff;
 }
-
 
 #logo {
     animation-delay: 50ms;
@@ -44,12 +43,60 @@
 
 main h1 {
     animation-delay: 150ms;
+    font-size: clamp(4rem, 8vw, 8.4rem);
 }
 
 .visit p {
     animation-delay: 200ms;
 }
 
-.visit {
-    animation-delay: 250ms;
+
+
+@media (min-width: 760px) {
+
+    #container {
+        padding: 5rem 2rem;
+        background: url("../images/bg.svg") no-repeat 80% / clamp(30rem, 54vw, 56rem);
+    }
+
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .location, h1, .visit p {
+        height: initial;
+        text-align: initial;
+    }
+
+    .location {
+        text-align: right;
+        font-size: 2.4rem;
+        line-height: 1.5;
+    }
+
+    main h1 {
+        font-weight: bold;
+        line-height: .88;
+        width: min(300px, 80%);
+        margin: clamp(10%, 9vh, 12%) 0 4rem;
+    }
+
+    .visit {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .visit p {
+        font-size: 2.4rem;
+        line-height: 1.5;
+        width: clamp(20rem, 20vw, 30rem);
+    }
+
+    .visit a {
+        margin: initial;
+    }
+
 }
