Completed Phase 04 Bootcamp
Phase 04 Bootcamp

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -4,14 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/page-landing.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/page-landing.css">
         
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;800&display=swap" rel="stylesheet">
 
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
 
         <title>Happy</title>
@@ -22,7 +22,7 @@
             <div id="container">
 
                 <header>
-                    <img class="animate-up" id="logo" src="./public/images/logo.svg" alt="Logomarca de Happy">
+                    <img class="animate-up" id="logo" src="/images/logo.svg" alt="Logomarca de Happy">
 
                     <div class="location animate-up">
                         <strong>
@@ -42,8 +42,8 @@
                             Visite orfanatos e mude o dia de muitas criancas
                         </p>
 
-                        <a href="orphanages.html" title="Visite orfanatos" class="animate-up">
-                            <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+                        <a href="/orphanages" title="Visite orfanatos" class="animate-up">
+                            <img src="/images/arrow.svg" alt="Ir para o mapa">
                         </a>
                     </section>
                 </main>
