--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -9,17 +9,17 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/sidebar.css">
-        <link rel="stylesheet" href="./public/css/form.css">
-        <link rel="stylesheet" href="./public/css/map.css">
-        <link rel="stylesheet" href="./public/css/buttons.css">
-        <link rel="stylesheet" href="./public/css/page-create-orphanage.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/sidebar.css">
+        <link rel="stylesheet" href="/css/form.css">
+        <link rel="stylesheet" href="/css/map.css">
+        <link rel="stylesheet" href="/css/buttons.css">
+        <link rel="stylesheet" href="/css/page-create-orphanage.css">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
         <title>Adicionar um orfanato | Happy</title>
     </head>
@@ -28,10 +28,10 @@
         <div id="page-create-orphanage">
 
             <aside class="animate-right sidebar">
-                <img src="./public/images/map-marker.svg" alt="Happy">
+                <img src="/images/map-marker.svg" alt="Happy">
                 <footer>
                     <button onclick="history.back()">
-                        <img src="./public/images/arrow-back.svg" alt="Voltar">
+                        <img src="/images/arrow-back.svg" alt="Voltar">
                     </button>
                 </footer>
             </aside>
@@ -88,14 +88,14 @@
                                     <input name="images" placeholder="Cole o link da foto aqui" required="required">
 
                                     <span onclick="deleteField(event)">
-                                        <img src="./public/images/remove-file.svg" alt="remover foto">
+                                        <img src="/images/remove-file.svg" alt="remover foto">
                                     </span>
 
                                 </div>
                             </div>
 
                             <button onclick="addPhotoField()" type="button">
-                                <img src="./public/images/add-file.svg" alt="Nova imagem">
+                                <img src="/images/add-file.svg" alt="Nova imagem">
                             </button>
                         </div>
 
@@ -145,6 +145,6 @@
 
             </main>
         </div>
-        <script src="./public/scripts/page-create-orphanage.js"></script>
+        <script src="/scripts/page-create-orphanage.js"></script>
     </body>
 </html>
