--- a/src/views/orphanage.hbs
+++ b/src/views/orphanage.hbs
@@ -9,16 +9,16 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/sidebar.css">
-        <link rel="stylesheet" href="./public/css/map.css">
-        <link rel="stylesheet" href="./public/css/buttons.css">
-        <link rel="stylesheet" href="./public/css/page-orphanage.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/sidebar.css">
+        <link rel="stylesheet" href="/css/map.css">
+        <link rel="stylesheet" href="/css/buttons.css">
+        <link rel="stylesheet" href="/css/page-orphanage.css">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
         <title>Lar das Meninas | Happy</title>
     </head>
@@ -27,10 +27,10 @@
         <div id="page-orphanage">
 
         <aside class="animate-right sidebar">
-            <img src="./public/images/map-marker.svg" alt="Happy">
+            <img src="/images/map-marker.svg" alt="Happy">
                 <footer>
                     <button onclick="history.back()">
-                        <img src="./public/images/arrow-back.svg" alt="Voltar">
+                        <img src="/images/arrow-back.svg" alt="Voltar">
                     </button>
                 </footer>
         </aside>
@@ -41,7 +41,7 @@
 
                 <div class="orphanage-details">
 
-                    <img src="./public/images/orphanage.jpg" alt="Lar das meninas">
+                    <img src="/images/orphanage.jpg" alt="Lar das meninas">
 
                     <div class="images">
                         <button onclick="selectImage(event)" class="active" type="button">
@@ -93,17 +93,17 @@
 
                         <div class="open-details">
                             <div class="hour">
-                                <img src="./public/images/clock.svg" alt="Horarios">
+                                <img src="/images/clock.svg" alt="Horarios">
                                 Horario de visitas das 8h ate 18h
                             </div>
                             <div class="open-on-weekends">
-                                <img src="./public/images/info.svg" alt="Informacoes">
+                                <img src="/images/info.svg" alt="Informacoes">
                                 Atendemos fim de semana
                             </div>
                         </div>
 
                         <button class="primary-button" type="button">
-                            <img src="./public/images/whatsapp.svg" alt="Chamar no whatsapp">
+                            <img src="/images/whatsapp.svg" alt="Chamar no whatsapp">
                             Entrar em contato
                         </button>
 
@@ -111,6 +111,6 @@
                 </div>
             </main>
         </div>
-            <script src="./public/scripts/page-orphanage.js"></script>
+            <script src="/scripts/page-orphanage.js"></script>
     </body>
 </html>
