--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -9,13 +9,13 @@
 
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="./public/css/main.css">
-        <link rel="stylesheet" href="./public/css/animations.css">
-        <link rel="stylesheet" href="./public/css/page-orphanages.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/animations.css">
+        <link rel="stylesheet" href="/css/page-orphanages.css">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 
-        <link rel="icon" href="./public/images/logo-icon.png">
+        <link rel="icon" href="/images/logo-icon.png">
 
         <title>Localize um orfanato | Happy</title>
     </head>
@@ -24,14 +24,14 @@
         <div id="page-orphanages">
             <aside class="animate-right">
                 <header>
-                    <img src="./public/images/map-marker.svg" alt="Happy">
+                    <img src="/images/map-marker.svg" alt="Happy">
 
                     <h2>
                         Escolha um orfanato no mapa
                     </h2>
 
                     <p>
-                        Muitas criancas estao esperando sua visita :)
+                        Muitas criancas estao esperando sua visita 😊
                     </p>
                 </header>
 
@@ -44,12 +44,27 @@
             </aside>
 
             <div id="mapid" class="animate-appear">
-                <a href="create-orphanage.html" class="create-orphanage" title="Cadastre um organato">
-                    <img src="./public/images/plus.svg" alt="Criar orfanato">
+
+                <div class="orphanages">
+
+                    {{#each orphanages}}
+                    <span hidden
+                        data-id="{{this.id}}"
+                        data-name="{{this.name}}"
+                        data-lat="{{this.lat}}"
+                        data-lng="{{this.lng}}"
+                    ></span>
+                    {{/each}}
+
+                </div>
+
+
+                <a href="/create-orphanage" class="create-orphanage" title="Cadastre um organato">
+                    <img src="/images/plus.svg" alt="Criar orfanato">
                 </a>
             </div>
 
         </div>
-        <script src="./public/scripts/page-orphanages.js"></script>
+        <script src="/scripts/page-orphanages.js"></script>
     </body>
 </html>
