--- a/public/css/page-orphanage.css
+++ b/public/css/page-orphanage.css
@@ -90,6 +90,7 @@ images button.active {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 2rem;
+    line-height: 1.5;
 }
 
 .open-details div {
@@ -109,9 +110,20 @@ images button.active {
 }
 
 .open-details .open-on-weekends {
-    background: linear-gradient(154.16deg, #edfff6 7.85%, #ffffff 91.03%);
-    border: 1px solid #a1e9c5;
     border-radius: 20px;
-    color: #37c77f ;
+  
 }
 
+.open-on-weekends.open {
+    background: linear-gradient(154.16deg, #edfff6 7.85%, #ffffff 91.03%);
+    border: 1px solid #a1e9c5;
+    color: #37c77f ;
+
+}
+
+.open-on-weekends.closed {
+    background: linear-gradient(154.16deg, #fcf0f4 7.85%, #ffffff 91.03%);
+    border: 1px solid #ffbcd4;
+    color: #ff669d ;
+
+}
