--- a/src/views/create-orphanage.hbs
+++ b/src/views/create-orphanage.hbs
@@ -1,150 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!-- Make sure you put this AFTER Leaflet's CSS -->
-        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+        integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+        crossorigin=""></script>
 
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/css/animations.css">
-        <link rel="stylesheet" href="/css/sidebar.css">
-        <link rel="stylesheet" href="/css/form.css">
-        <link rel="stylesheet" href="/css/map.css">
-        <link rel="stylesheet" href="/css/buttons.css">
-        <link rel="stylesheet" href="/css/page-create-orphanage.css">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/animations.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
+    <link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/map.css">
+    <link rel="stylesheet" href="/css/buttons.css">
+    <link rel="stylesheet" href="/css/page-create-orphanage.css">
 
-        <link rel="icon" href="/images/logo-icon.png">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+        integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+        crossorigin="" />
 
-        <title>Adicionar um orfanato | Happy</title>
-    </head>
-    <body>
+    <link rel="icon" href="/images/logo-icon.png">
 
-        <div id="page-create-orphanage">
+    <title>Adicionar um orfanato | Happy</title>
+</head>
 
-            <aside class="animate-right sidebar">
-                <img src="/images/map-marker.svg" alt="Happy">
-                <footer>
-                    <button onclick="history.back()">
-                        <img src="/images/arrow-back.svg" alt="Voltar">
-                    </button>
-                </footer>
-            </aside>
+<body>
 
-            <main class="animate-right with-sidebar">
+    <div id="page-create-orphanage">
 
-                <form action="">
-                    <fieldset>
-                        <legend>Dados</legend>
+        <aside class="animate-right sidebar">
+            <img src="/images/map-marker.svg" alt="Happy">
+            <footer>
+                <button onclick="history.back()">
+                    <img src="/images/arrow-back.svg" alt="Voltar">
+                </button>
+            </footer>
+        </aside>
 
-                        <div class="map-container">
-                            <div id="mapid"></div>
-                            <input type="hidden" name="lat">
-                            <input type="hidden" name="lng">
-                            <footer>
-                                <a href="" id="select-point">
-                                    Clique no mapa para adicionar a localizacao
-                                </a>
-                            </footer>
-                        </div>
+        <main class="animate-right with-sidebar">
 
-                        <div class="input-block">
-                            <label for="name">
-                                Nome
-                            </label>
-                            <input id="name" name="name" type="text" required="required">
-                        </div>
+            <form action="save-orphanage" method="POST">
+                <fieldset>
+                    <legend>Dados</legend>
 
-                        <div class="input-block">
-                            <label for="about">
-                                Sobre
-                                <span>
-                                    Maximo de 300 caracteres
+                    <div class="map-container">
+                        <div id="mapid"></div>
+                        <input type="hidden" name="lat">
+                        <input type="hidden" name="lng">
+                        <footer>
+                            <a href="" id="select-point">
+                                Clique no mapa para adicionar a localizacao
+                            </a>
+                        </footer>
+                    </div>
+
+                    <div class="input-block">
+                        <label for="name">
+                            Nome
+                        </label>
+                        <input id="name" name="name" type="text" required="required">
+                    </div>
+
+                    <div class="input-block">
+                        <label for="about">
+                            Sobre
+                            <span>
+                                Maximo de 300 caracteres
+                            </span>
+                        </label>
+                        <textarea id="about" name="about" type="text" required="required"></textarea>
+                    </div>
+
+                    <div class="input-block">
+                        <label for="whatsapp">
+                            Numero de Whatsapp
+                        </label>
+                        <input id="whatsapp" name="whatsapp" type="text" required="required">
+                    </div>
+
+                    <div class="input-block images">
+                        <label for="images">
+                            Fotos
+                        </label>
+
+                        <div class="images-upload" id="images">
+
+                            <div class="new-upload">
+                                <input name="images" placeholder="Cole o link da foto aqui" required="required"
+                                    type="url">
+
+                                <span onclick="deleteField(event)">
+                                    <img src="/images/remove-file.svg" alt="remover foto">
                                 </span>
-                            </label>
-                            <textarea id="about" name="about" type="text" required="required"></textarea>
-                        </div>
-
-                        <div class="input-block">
-                            <label for="whatsapp">
-                                Numero de Whatsapp
-                            </label>
-                            <input id="whatsapp" name="whatsapp" type="text" required="required">
-                        </div>
-
-                        <div class="input-block images">
-                            <label for="images">
-                                Fotos
-                            </label>
-
-                            <div class="images-upload" id="images">
-
-                                <div class="new-upload">
-                                    <input name="images" placeholder="Cole o link da foto aqui" required="required">
-
-                                    <span onclick="deleteField(event)">
-                                        <img src="/images/remove-file.svg" alt="remover foto">
-                                    </span>
-
-                                </div>
-                            </div>
-
-                            <button onclick="addPhotoField()" type="button">
-                                <img src="/images/add-file.svg" alt="Nova imagem">
-                            </button>
-                        </div>
-
-                    </fieldset>
-
-                    <fieldset>
-                        <legend>Visitacao</legend>
-
-                        <div class="input-block">
-                            <label for="instructions">
-                                Instrucoes
-
-                            </label>
-                            <textarea id="instructions" name="instructions" type="text" required="required"></textarea>
-                        </div>
-
-                        <div class="input-block">
-                            <label for="opening_hours">
-                                Horario das visita
-                            </label>
-                            <input id="opening_hours" name="opening_hours" type="text" required="required">
-                        </div>
-
-                        <div class="input-block">
-                            <label for="open_on_weekends">
-                                Atende fim de semana?
-                            </label>
-
-                            <input type="hidden" id="open_on_weekends " name="open_on_weekends" value="1" required="required">
-
-                            <div class="button-select">
-
-                                <button data-value="1" onclick="toggleSelect(event)" type="button" class="active">Sim</button>
-
-                                <button data-value="0" onclick="toggleSelect(event)" type="button">Nao</button>
 
                             </div>
+                        </div>
 
-                            <button type="submit" class="primary-button">
-                                Confirmar
-                            </button>
+                        <button onclick="addPhotoField()" type="button">
+                            <img src="/images/add-file.svg" alt="Nova imagem">
+                        </button>
+                    </div>
+
+                </fieldset>
+
+                <fieldset>
+                    <legend>Visitacao</legend>
+
+                    <div class="input-block">
+                        <label for="instructions">
+                            Instrucoes
+
+                        </label>
+                        <textarea id="instructions" name="instructions" type="text" required="required"></textarea>
+                    </div>
+
+                    <div class="input-block">
+                        <label for="opening_hours">
+                            Horario das visita
+                        </label>
+                        <input id="opening_hours" name="opening_hours" type="text" required="required">
+                    </div>
+
+                    <div class="input-block">
+                        <label for="open_on_weekends">
+                            Atende fim de semana?
+                        </label>
+
+                        <input type="hidden" id="open_on_weekends " name="open_on_weekends" value="1"
+                            required="required">
+
+                        <div class="button-select">
+
+                            <button data-value="1" onclick="toggleSelect(event)" type="button"
+                                class="active">Sim</button>
+
+                            <button data-value="0" onclick="toggleSelect(event)" type="button">Nao</button>
 
                         </div>
 
-                    </fieldset>
-                </form>
+                        <button type="submit" class="primary-button">
+                            Confirmar
+                        </button>
 
-            </main>
-        </div>
-        <script src="/scripts/page-create-orphanage.js"></script>
-    </body>
+                    </div>
+
+                </fieldset>
+            </form>
+
+        </main>
+    </div>
+    <script src="/scripts/page-create-orphanage.js"></script>
+</body>
+
 </html>
